@@ -8,8 +8,15 @@ apport (0.110) UNRELEASED; urgency=low
   * bin/crash-digger: Intercept exceptions when downloading crash reports for
     duplicate checking, so that the retracer does not crash on malformed bug
     reports. (LP: #205178)
+  * apport/packaging.py: Introduce a new function enabled() which reports
+    whether Apport should create crash reports. Signal crashes are controlled
+    by /proc/sys/kernel/core_pattern, but we need that to control whether
+    reports for Python, package, or kernel crashes are generated.
+  * backends/packaging-apt-dpkg.py: Provide implementation for
+    PackageInfo.enabled() for Debian/Ubuntu by evaluating /etc/default/apport.
+    Add various test cases for different configuration files and absent files.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 09 May 2008 13:32:00 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 17 May 2008 12:35:36 +0200
 
 apport (0.109) intrepid; urgency=low
 
